# NVR-viewer-built-with-Qt5-FFmpeg-VAAPI-optimized-for-Debian-12

./: build.sh  kill.sh  readme.md  start-nvr-test.sh
NVR Systemd Automation Stack/: 10-monitors.conf  kill-nvr.sh  mount-agentmedia.service  nas-monitor.service  nvr-gui.service  nvr-only.sh  readme.md  xorg.service
nvr-gui-vaapi/: CMakeLists.txt  config.json
nvr-gui-vaapi/src/: main.cpp
